# mikoto

./: .editorconfig  .env.local  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  mikoto.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  serverless-compose.yml  serverless.yml  tsconfig.json  tsconfig.project.json  turbo.json
.github/workflows/: main.yml  mikoto.yml
infra/elasticmq/: fly.toml
infra/rabbitmq/: Dockerfile  fly.toml  rabbitmq.conf
infra/redis/: fly.toml
samples/: .env.development  package.json  pnpm-lock.yaml  serverless.yml
samples/scripts/: build_artifact.sh  build_ncc.sh
samples/src/: index.js
scripts/: build_artifact.sh
src/: main.rs  my_aws.rs  sub.rs  types.rs
