[package]
edition = "2021"
name = "hello"
version = "0.1.0"

[dependencies]
aws-config = "0.12.0"
aws-sdk-lambda = "0.12.0"
aws-smithy-http = "0.42.0"
aws-types = "0.12.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
warp = "0.3.2"
