[package]
edition = "2021"
name = "hello"
version = "0.1.0"

[dependencies]
amiquip = "0.4.2"
anyhow = "1.0.57"
aws-sdk-lambda = "0.12.0"
aws-smithy-http = "0.42.0"
aws-smithy-types = "0.42.0"
aws-types = "0.12.0"
aws_lambda_events = "0.6.3"
env_logger = "0.9.0"
log = "0.4.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
warp = "0.3.2"
