[package]
edition = "2021"
name = "hello"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
aws-sdk-lambda = "0.12.0"
aws-smithy-http = "0.42.0"
aws-smithy-types = "0.42.0"
aws-types = "0.12.0"
aws_lambda_events = "0.6.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
lapin = "2.1.1"
log = "0.4.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.17.0", features = ["full"]}
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
warp = "0.3.2"
